# esp-thermostat

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml
src/: backend.rs  controller.rs  events.rs  lib.rs  main.rs
src/bsp/: mod.rs  slint_platform.rs
src/ui/: window.rs
ui/: main.slint
