[package]
name = "esp-thermostat"
version = "0.1.0"
edition = "2021"
resolver = "2"

[[bin]]
name = "esp-thermostat"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "z"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

[dependencies]
log = { version = "0.4", default-features = false }
embedded-svc = { version = "0.28", default-features = false }
esp-idf-svc = { version = "0.50", default-features = false, features = ["std", "alloc", "binstart", "embassy-sync", "critical-section"] }
slint = { version = "1.11", default-features = false, features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"] }
gt911 = "0.3"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
keycode = "1"
serde = "1"
serde_json = "1"
thiserror = "2"
one-wire-bus = "0.1"
ds18b20 = "0.1"

[build-dependencies]
embuild = "0.33"
slint-build = { version = "1.11", features=["sdf-fonts"] }

[package.metadata.esp-idf-sys]
extra_components = [
    { bindings_header = "bindings.h" }
]